# IAA_benchmarking

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure_iaa_user.sh  dockerfile  plot.py  plot_benchmark.py  plot_corpus.py  prepare_machine.sh  run_and_plot.sh  run_benchmark.sh  run_docker.sh
dataset/: extract.sh
src/: main.cc  util.h
src/full_system/: benchmark_full_system.h
src/multi_engine/: benchmark.h  qpl_parallel.h
src/single_engine/: benchmark.cc  benchmark.h  benchmark_page_faults.h  benchmark_scattered.h  qpl_canned.h  qpl_compress_decompress.h  qpl_scattered.h
